Implemented generate XML for Solr search configuration.